--- a/src/css/components/item-info/item-details.css
+++ b/src/css/components/item-info/item-details.css
@@ -29,7 +29,7 @@
 
 	height: 100%;
 	box-sizing: inherit;
-	overflow: overlay;
+	overflow: auto;
 }
 
 header {
